SRTool/srtool/tool/src/srt/parser/SimpleCParser.java
// $ANTLR 3.4 SimpleC.g 2014-01-27 15:17:27

  package srt.parser;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class SimpleCParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ASSERT", "ASSIGNMENT", "ASSUME", "BAND", "BLOCK", "BNOT", "BOR", "BOUND", "BXOR", "CANDIDATE_INV", "COMMENT", "COMPOUND_STATEMENT", "DECL", "DECL_LIST", "DIGIT", "DIVIDE", "EMPTY_STMT", "EQUAL", "GEQ", "GT", "HAVOC", "ID", "IF", "INVARIANT_LIST", "LAND", "LEQ", "LNOT", "LOR", "LSHIFT", "LT", "MOD", "MULTIPLY", "NEQUAL", "NUMBER", "PROGRAM", "REQUIRED_INV", "RSHIFT", "SUBTRACT", "TERNARY", "UMINUS", "UPLUS", "WHILE", "WHITESPACE", "'('", "')'", "','", "':'", "';'", "'bound'", "'cand'", "'else'", "'int'", "'inv'", "'void'", "'{'", "'}'"
    };

    public static final int EOF=-1;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int T__50=50;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int T__58=58;
    public static final int T__59=59;
    public static final int T__60=60;
    public static final int ADD=4;
    public static final int ASSERT=5;
    public static final int ASSIGNMENT=6;
    public static final int ASSUME=7;
    public static final int BAND=8;
    public static final int BLOCK=9;
    public static final int BNOT=10;
    public static final int BOR=11;
    public static final int BOUND=12;
    public static final int BXOR=13;
    public static final int CANDIDATE_INV=14;
    public static final int COMMENT=15;
    public static final int COMPOUND_STATEMENT=16;
    public static final int DECL=17;
    public static final int DECL_LIST=18;
    public static final int DIGIT=19;
    public static final int DIVIDE=20;
    public static final int EMPTY_STMT=21;
    public static final int EQUAL=22;
    public static final int GEQ=23;
    public static final int GT=24;
    public static final int HAVOC=25;
    public static final int ID=26;
    public static final int IF=27;
    public static final int INVARIANT_LIST=28;
    public static final int LAND=29;
    public static final int LEQ=30;
    public static final int LNOT=31;
    public static final int LOR=32;
    public static final int LSHIFT=33;
    public static final int LT=34;
    public static final int MOD=35;
    public static final int MULTIPLY=36;
    public static final int NEQUAL=37;
    public static final int NUMBER=38;
    public static final int PROGRAM=39;
    public static final int REQUIRED_INV=40;
    public static final int RSHIFT=41;
    public static final int SUBTRACT=42;
    public static final int TERNARY=43;
    public static final int UMINUS=44;
    public static final int UPLUS=45;
    public static final int WHILE=46;
    public static final int WHITESPACE=47;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public SimpleCParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public SimpleCParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return SimpleCParser.tokenNames; }
    public String getGrammarFileName() { return "SimpleC.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // SimpleC.g:35:1: start : 'void' ID '(' declList ')' block EOF -> ^( PROGRAM ID declList block ) ;
    public final SimpleCParser.start_return start() throws RecognitionException {
        SimpleCParser.start_return retval = new SimpleCParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token string_literal1=null;
        Token ID2=null;
        Token char_literal3=null;
        Token char_literal5=null;
        Token EOF7=null;
        SimpleCParser.declList_return declList4 =null;

        SimpleCParser.block_return block6 =null;


        Object string_literal1_tree=null;
        Object ID2_tree=null;
        Object char_literal3_tree=null;
        Object char_literal5_tree=null;
        Object EOF7_tree=null;
        RewriteRuleTokenStream stream_49=new RewriteRuleTokenStream(adaptor,"token 49");
        RewriteRuleTokenStream stream_48=new RewriteRuleTokenStream(adaptor,"token 48");
        RewriteRuleTokenStream stream_58=new RewriteRuleTokenStream(adaptor,"token 58");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        RewriteRuleSubtreeStream stream_declList=new RewriteRuleSubtreeStream(adaptor,"rule declList");
        try {
            // SimpleC.g:35:6: ( 'void' ID '(' declList ')' block EOF -> ^( PROGRAM ID declList block ) )
            // SimpleC.g:36:3: 'void' ID '(' declList ')' block EOF
            {
            string_literal1=(Token)match(input,58,FOLLOW_58_in_start100);  
            stream_58.add(string_literal1);


            ID2=(Token)match(input,ID,FOLLOW_ID_in_start102);  
            stream_ID.add(ID2);


            char_literal3=(Token)match(input,48,FOLLOW_48_in_start104);  
            stream_48.add(char_literal3);


            pushFollow(FOLLOW_declList_in_start106);
            declList4=declList();

            state._fsp--;

            stream_declList.add(declList4.getTree());

            char_literal5=(Token)match(input,49,FOLLOW_49_in_start108);  
            stream_49.add(char_literal5);


            pushFollow(FOLLOW_block_in_start110);
            block6=block();

            state._fsp--;

            stream_block.add(block6.getTree());

            EOF7=(Token)match(input,EOF,FOLLOW_EOF_in_start112);  
            stream_EOF.add(EOF7);


            // AST REWRITE
            // elements: block, declList, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:40: -> ^( PROGRAM ID declList block )
            {
                // SimpleC.g:36:43: ^( PROGRAM ID declList block )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(PROGRAM, "PROGRAM")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_1, stream_declList.nextTree());

                adaptor.addChild(root_1, stream_block.nextTree());

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class declList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "declList"
    // SimpleC.g:39:1: declList : ( decl ( ',' decl )* )? -> ^( DECL_LIST ( decl )* ) ;
    public final SimpleCParser.declList_return declList() throws RecognitionException {
        SimpleCParser.declList_return retval = new SimpleCParser.declList_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal9=null;
        SimpleCParser.decl_return decl8 =null;

        SimpleCParser.decl_return decl10 =null;


        Object char_literal9_tree=null;
        RewriteRuleTokenStream stream_50=new RewriteRuleTokenStream(adaptor,"token 50");
        RewriteRuleSubtreeStream stream_decl=new RewriteRuleSubtreeStream(adaptor,"rule decl");
        try {
            // SimpleC.g:39:9: ( ( decl ( ',' decl )* )? -> ^( DECL_LIST ( decl )* ) )
            // SimpleC.g:39:11: ( decl ( ',' decl )* )?
            {
            // SimpleC.g:39:11: ( decl ( ',' decl )* )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==56) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // SimpleC.g:39:13: decl ( ',' decl )*
                    {
                    pushFollow(FOLLOW_decl_in_declList134);
                    decl8=decl();

                    state._fsp--;

                    stream_decl.add(decl8.getTree());

                    // SimpleC.g:39:18: ( ',' decl )*
                    loop1:
                    do {
                        int alt1=2;
                        int LA1_0 = input.LA(1);

                        if ( (LA1_0==50) ) {
                            alt1=1;
                        }


                        switch (alt1) {
                    	case 1 :
                    	    // SimpleC.g:39:20: ',' decl
                    	    {
                    	    char_literal9=(Token)match(input,50,FOLLOW_50_in_declList138);  
                    	    stream_50.add(char_literal9);


                    	    pushFollow(FOLLOW_decl_in_declList140);
                    	    decl10=decl();

                    	    state._fsp--;

                    	    stream_decl.add(decl10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop1;
                        }
                    } while (true);


                    }
                    break;

            }


            // AST REWRITE
            // elements: decl
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 39:33: -> ^( DECL_LIST ( decl )* )
            {
                // SimpleC.g:39:36: ^( DECL_LIST ( decl )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(DECL_LIST, "DECL_LIST")
                , root_1);

                // SimpleC.g:39:48: ( decl )*
                while ( stream_decl.hasNext() ) {
                    adaptor.addChild(root_1, stream_decl.nextTree());

                }
                stream_decl.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "declList"


    public static class compoundStmt_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compoundStmt"
    // SimpleC.g:42:1: compoundStmt : ( statement )* -> ^( COMPOUND_STATEMENT ( statement )* ) ;
    public final SimpleCParser.compoundStmt_return compoundStmt() throws RecognitionException {
        SimpleCParser.compoundStmt_return retval = new SimpleCParser.compoundStmt_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleCParser.statement_return statement11 =null;


        RewriteRuleSubtreeStream stream_statement=new RewriteRuleSubtreeStream(adaptor,"rule statement");
        try {
            // SimpleC.g:42:13: ( ( statement )* -> ^( COMPOUND_STATEMENT ( statement )* ) )
            // SimpleC.g:43:2: ( statement )*
            {
            // SimpleC.g:43:2: ( statement )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==ASSERT||LA3_0==ASSUME||(LA3_0 >= HAVOC && LA3_0 <= IF)||LA3_0==WHILE||LA3_0==52||LA3_0==56||LA3_0==59) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // SimpleC.g:43:2: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_compoundStmt162);
            	    statement11=statement();

            	    state._fsp--;

            	    stream_statement.add(statement11.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            // AST REWRITE
            // elements: statement
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 43:16: -> ^( COMPOUND_STATEMENT ( statement )* )
            {
                // SimpleC.g:43:19: ^( COMPOUND_STATEMENT ( statement )* )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(COMPOUND_STATEMENT, "COMPOUND_STATEMENT")
                , root_1);

                // SimpleC.g:43:40: ( statement )*
                while ( stream_statement.hasNext() ) {
                    adaptor.addChild(root_1, stream_statement.nextTree());

                }
                stream_statement.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compoundStmt"


    public static class statement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "statement"
    // SimpleC.g:46:1: statement : ( terminatedStatement ';' !| nonterminatedStatement ) ;
    public final SimpleCParser.statement_return statement() throws RecognitionException {
        SimpleCParser.statement_return retval = new SimpleCParser.statement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal13=null;
        SimpleCParser.terminatedStatement_return terminatedStatement12 =null;

        SimpleCParser.nonterminatedStatement_return nonterminatedStatement14 =null;


        Object char_literal13_tree=null;

        try {
            // SimpleC.g:46:10: ( ( terminatedStatement ';' !| nonterminatedStatement ) )
            // SimpleC.g:47:2: ( terminatedStatement ';' !| nonterminatedStatement )
            {
            root_0 = (Object)adaptor.nil();


            // SimpleC.g:47:2: ( terminatedStatement ';' !| nonterminatedStatement )
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( (LA4_0==ASSERT||LA4_0==ASSUME||(LA4_0 >= HAVOC && LA4_0 <= ID)||LA4_0==52||LA4_0==56) ) {
                alt4=1;
            }
            else if ( (LA4_0==IF||LA4_0==WHILE||LA4_0==59) ) {
                alt4=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }
            switch (alt4) {
                case 1 :
                    // SimpleC.g:47:2: terminatedStatement ';' !
                    {
                    pushFollow(FOLLOW_terminatedStatement_in_statement184);
                    terminatedStatement12=terminatedStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, terminatedStatement12.getTree());

                    char_literal13=(Token)match(input,52,FOLLOW_52_in_statement186); 

                    }
                    break;
                case 2 :
                    // SimpleC.g:48:4: nonterminatedStatement
                    {
                    pushFollow(FOLLOW_nonterminatedStatement_in_statement192);
                    nonterminatedStatement14=nonterminatedStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, nonterminatedStatement14.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "statement"


    public static class nonterminatedStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "nonterminatedStatement"
    // SimpleC.g:51:1: nonterminatedStatement : ( block | ifStatement | whileStatement );
    public final SimpleCParser.nonterminatedStatement_return nonterminatedStatement() throws RecognitionException {
        SimpleCParser.nonterminatedStatement_return retval = new SimpleCParser.nonterminatedStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleCParser.block_return block15 =null;

        SimpleCParser.ifStatement_return ifStatement16 =null;

        SimpleCParser.whileStatement_return whileStatement17 =null;



        try {
            // SimpleC.g:51:23: ( block | ifStatement | whileStatement )
            int alt5=3;
            switch ( input.LA(1) ) {
            case 59:
                {
                alt5=1;
                }
                break;
            case IF:
                {
                alt5=2;
                }
                break;
            case WHILE:
                {
                alt5=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;

            }

            switch (alt5) {
                case 1 :
                    // SimpleC.g:52:4: block
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_block_in_nonterminatedStatement204);
                    block15=block();

                    state._fsp--;

                    adaptor.addChild(root_0, block15.getTree());

                    }
                    break;
                case 2 :
                    // SimpleC.g:53:4: ifStatement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_ifStatement_in_nonterminatedStatement209);
                    ifStatement16=ifStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, ifStatement16.getTree());

                    }
                    break;
                case 3 :
                    // SimpleC.g:54:4: whileStatement
                    {
                    root_0 = (Object)adaptor.nil();


                    pushFollow(FOLLOW_whileStatement_in_nonterminatedStatement214);
                    whileStatement17=whileStatement();

                    state._fsp--;

                    adaptor.addChild(root_0, whileStatement17.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "nonterminatedStatement"


    public static class block_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "block"
    // SimpleC.g:57:1: block : '{' compoundStmt '}' -> ^( BLOCK ( compoundStmt )? ) ;
    public final SimpleCParser.block_return block() throws RecognitionException {
        SimpleCParser.block_return retval = new SimpleCParser.block_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token char_literal18=null;
        Token char_literal20=null;
        SimpleCParser.compoundStmt_return compoundStmt19 =null;


        Object char_literal18_tree=null;
        Object char_literal20_tree=null;
        RewriteRuleTokenStream stream_59=new RewriteRuleTokenStream(adaptor,"token 59");
        RewriteRuleTokenStream stream_60=new RewriteRuleTokenStream(adaptor,"token 60");
        RewriteRuleSubtreeStream stream_compoundStmt=new RewriteRuleSubtreeStream(adaptor,"rule compoundStmt");
        try {
            // SimpleC.g:57:6: ( '{' compoundStmt '}' -> ^( BLOCK ( compoundStmt )? ) )
            // SimpleC.g:58:2: '{' compoundStmt '}'
            {
            char_literal18=(Token)match(input,59,FOLLOW_59_in_block223);  
            stream_59.add(char_literal18);


            pushFollow(FOLLOW_compoundStmt_in_block225);
            compoundStmt19=compoundStmt();

            state._fsp--;

            stream_compoundStmt.add(compoundStmt19.getTree());

            char_literal20=(Token)match(input,60,FOLLOW_60_in_block227);  
            stream_60.add(char_literal20);


            // AST REWRITE
            // elements: compoundStmt
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 58:23: -> ^( BLOCK ( compoundStmt )? )
            {
                // SimpleC.g:58:26: ^( BLOCK ( compoundStmt )? )
                {
                Object root_1 = (Object)adaptor.nil();
                root_1 = (Object)adaptor.becomeRoot(
                (Object)adaptor.create(BLOCK, "BLOCK")
                , root_1);

                // SimpleC.g:58:34: ( compoundStmt )?
                if ( stream_compoundStmt.hasNext() ) {
                    adaptor.addChild(root_1, stream_compoundStmt.nextTree());

                }
                stream_compoundStmt.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "block"


    public static class ifStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "ifStatement"
    // SimpleC.g:61:1: ifStatement : IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )? ;
    public final SimpleCParser.ifStatement_return ifStatement() throws RecognitionException {
        SimpleCParser.ifStatement_return retval = new SimpleCParser.ifStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token IF21=null;
        Token char_literal22=null;
        Token char_literal24=null;
        Token string_literal26=null;
        SimpleCParser.expr_return expr23 =null;

        SimpleCParser.statement_return statement25 =null;

        SimpleCParser.statement_return statement27 =null;


        Object IF21_tree=null;
        Object char_literal22_tree=null;
        Object char_literal24_tree=null;
        Object string_literal26_tree=null;

        try {
            // SimpleC.g:61:12: ( IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )? )
            // SimpleC.g:62:2: IF ^ '(' ! expr ')' ! statement ( options {greedy=true; } : 'else' ! statement )?
            {
            root_0 = (Object)adaptor.nil();


            IF21=(Token)match(input,IF,FOLLOW_IF_in_ifStatement245); 
            IF21_tree = 
            (Object)adaptor.create(IF21)
            ;
            root_0 = (Object)adaptor.becomeRoot(IF21_tree, root_0);


            char_literal22=(Token)match(input,48,FOLLOW_48_in_ifStatement248); 

            pushFollow(FOLLOW_expr_in_ifStatement251);
            expr23=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr23.getTree());

            char_literal24=(Token)match(input,49,FOLLOW_49_in_ifStatement253); 

            pushFollow(FOLLOW_statement_in_ifStatement256);
            statement25=statement();

            state._fsp--;

            adaptor.addChild(root_0, statement25.getTree());

            // SimpleC.g:62:31: ( options {greedy=true; } : 'else' ! statement )?
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==55) ) {
                alt6=1;
            }
            switch (alt6) {
                case 1 :
                    // SimpleC.g:62:57: 'else' ! statement
                    {
                    string_literal26=(Token)match(input,55,FOLLOW_55_in_ifStatement268); 

                    pushFollow(FOLLOW_statement_in_ifStatement271);
                    statement27=statement();

                    state._fsp--;

                    adaptor.addChild(root_0, statement27.getTree());

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "ifStatement"


    public static class whileStatement_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "whileStatement"
    // SimpleC.g:65:1: whileStatement : WHILE ^ '(' ! expr ')' ! bound invariantList statement ;
    public final SimpleCParser.whileStatement_return whileStatement() throws RecognitionException {
        SimpleCParser.whileStatement_return retval = new SimpleCParser.whileStatement_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token WHILE28=null;
        Token char_literal29=null;
        Token char_literal31=null;
        SimpleCParser.expr_return expr30 =null;

        SimpleCParser.bound_return bound32 =null;

        SimpleCParser.invariantList_return invariantList33 =null;

        SimpleCParser.statement_return statement34 =null;


        Object WHILE28_tree=null;
        Object char_literal29_tree=null;
        Object char_literal31_tree=null;

        try {
            // SimpleC.g:65:15: ( WHILE ^ '(' ! expr ')' ! bound invariantList statement )
            // SimpleC.g:66:2: WHILE ^ '(' ! expr ')' ! bound invariantList statement
            {
            root_0 = (Object)adaptor.nil();


            WHILE28=(Token)match(input,WHILE,FOLLOW_WHILE_in_whileStatement282); 
            WHILE28_tree = 
            (Object)adaptor.create(WHILE28)
            ;
            root_0 = (Object)adaptor.becomeRoot(WHILE28_tree, root_0);


            char_literal29=(Token)match(input,48,FOLLOW_48_in_whileStatement285); 

            pushFollow(FOLLOW_expr_in_whileStatement288);
            expr30=expr();

            state._fsp--;

            adaptor.addChild(root_0, expr30.getTree());

            char_literal31=(Token)match(input,49,FOLLOW_49_in_whileStatement290); 

            pushFollow(FOLLOW_bound_in_whileStatement293);
            bound32=bound();

            state._fsp--;

            adaptor.addChild(root_0, bound32.getTree());

            pushFollow(FOLLOW_invariantList_in_whileStatement295);
            invariantList33=invariantList();

            state._fsp--;

            adaptor.addChild(root_0, invariantList33.getTree());

            pushFollow(FOLLOW_statement_in_whileStatement297);
            statement34=statement();

            state._fsp--;

            adaptor.addChild(root_0, statement34.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "whileStatement"


    public static class invariantList_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "invariantList"
    // SimpleC.g:69:1: invariantList : ( invariant )* -> ^( INVARIANT_LIST ( invariant )* ) ;
    public final SimpleCParser.invariantList_return invariantList() throws RecognitionException {
        SimpleCParser.invariantList_return retval = new SimpleCParser.invariantList_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        SimpleCParser.invariant_return invariant35 =null;

